deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: greeting
  name: greeting-dc
spec:
  replicas: 1
  selector:
      matchLabels:
        name: greeting
  template:
    metadata:
      labels:
        name: greeting
    spec:
      containers:
      - name: greeting-ctr
        image: host.minikube.internal:5043/greeting
        imagePullPolicy: Always
