service.yml
apiVersion: v1
kind: Service
metadata:
    name: greeting-svc
spec:
    selector:
        role: app
    ports:
        protocol: TCP
        port: 8080
        targetPort: 8080
    type: NodePort
