ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: greeting
  name: greeting-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /greeting/$1
spec:
    rules:
    - host: greeting.info
      http:
          paths:
          - path: /
            backend:
                serviceName: greeting-svc
                servicePort: 8080
